src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_TestProcessContent.xaml
<StackPanel Name="StackPanel0" xmlns='http://schemas.microsoft.com/winfx/2006/xaml/presentation' xmlns:v1='http://ns.controlstore.com/avalon/2005' xmlns:v2='http://ns.controlstore.com/avalon/2007' xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006">
    <StackPanel Name="StackPanel1" mc:Ignorable="v1">
        <v1:TransButton>
            <v2:TransButton />
        </v1:TransButton>
        <v1:TransListBox>
            <v2:TransListBoxItem />
        </v1:TransListBox>
    </StackPanel>
</StackPanel>
